@@ -220,7 +220,7 @@ void Serial0Baud(unsigned long baud)
   TR2=1; // start timer
 }  
 
-void Serial0IrqHandler (void) __interrupt 4
+void Serial0IrqHandler (void) __interrupt (4)
 {
   if (RI_0) {
     receive0Buffer[receive0BufferHead]=SBUF0;
@@ -370,7 +370,7 @@ void Serial1Baud(unsigned long baud)
   TR1=1; // start timer
 }  
 
-void Serial1IrqHandler (void) __interrupt 7
+void Serial1IrqHandler (void) __interrupt (7)
 {
   if (RI_1) {
     receive1Buffer[receive1BufferHead]=SBUF1;
@@ -492,7 +492,7 @@ void junk_ClockIrqHandler (void) __interrupt 10
 }
 #else
 // but look at the code, and the pushes and pops, so:
-void ClockIrqHandler (void) __interrupt 1 __naked
+void ClockIrqHandler (void) __interrupt (1) __naked
 {
   __asm
     push acc
